@@ -23,21 +23,21 @@ setAs("CsparseMatrix", "nsparseMatrix",
 ## selections.  Coerce a ddensematrix argument to a lsparseMatrix.
 
 setMethod("%*%", signature(x = "nsparseMatrix", y = "ndenseMatrix"),
-          function(x, y) callGeneric(x, as(y, "nsparseMatrix")))
+	  function(x, y) x %*% as(y, "nsparseMatrix"))
 
 setMethod("%*%", signature(x = "ndenseMatrix", y = "nsparseMatrix"),
-          function(x, y) callGeneric(as(x, "nsparseMatrix"), y))
+	  function(x, y) as(x, "nsparseMatrix") %*% y)
 
 setMethod("crossprod", signature(x = "nsparseMatrix", y = "ndenseMatrix"),
-          function(x, y = NULL) callGeneric(x, as(y, "nsparseMatrix")))
+	  function(x, y = NULL) crossprod(x, as(y, "nsparseMatrix")))
 
 setMethod("crossprod", signature(x = "ndenseMatrix", y = "nsparseMatrix"),
-          function(x, y = NULL) callGeneric(as(x, "nsparseMatrix"), y))
+	  function(x, y = NULL) crossprod(as(x, "nsparseMatrix"), y))
 
 ## and coerce lsparse* to lgC*
 setMethod("%*%", signature(x = "nsparseMatrix", y = "nsparseMatrix"),
-          function(x, y) callGeneric(as(x, "ngCMatrix"), as(y, "ngCMatrix")))
+	  function(x, y) as(x, "ngCMatrix") %*% as(y, "ngCMatrix"))
 
 setMethod("crossprod", signature(x = "nsparseMatrix", y = "nsparseMatrix"),
-          function(x, y = NULL)
-          callGeneric(as(x, "ngCMatrix"), as(y, "ngCMatrix")))
+	  function(x, y = NULL)
+	  crossprod(as(x, "ngCMatrix"), as(y, "ngCMatrix")))
